kafka_1: имя топика вынесено в файл свойств

--- a/src/main/resources/kafka-producer.properties
+++ b/src/main/resources/kafka-producer.properties
@@ -17,3 +17,6 @@ linger.ms=10
 
 # оптимальный баланс между степенью сжатия и производительностью
 compression.type=lz4
+
+# имя топика транзакций
+transaction.topic.name=transaction-topic
