kafka_2: имя топика вынесено в файл свойств

--- a/src/main/resources/kafka.properties
+++ b/src/main/resources/kafka.properties
@@ -5,3 +5,6 @@ group.id=transaction-consumer
 enable.auto.commit=false
 auto.offset.reset=earliest
 max.poll.records=500
+
+# имя топика транзакций
+transaction.topic.name=transaction-topic
