kafka_3: добавлен счетчик повторных отправок; добавлено ограничение на количество повторных отправок; добавлен сервис хранения информации об отправленных транзакциях

--- a/src/main/resources/kafka.properties
+++ b/src/main/resources/kafka.properties
@@ -12,6 +12,8 @@ transaction.producer.compression.type=lz4
 transaction.topic.name=transaction-topic
 # период переотправки транзакций, у которых истек таймаут подтверждения
 transaction.retry.period=PT5S
+# максимально количество повторных отправок транзакций
+transaction.retry.maxcount=2
 
 # настройки потребителя подтверждений обработки транзакций
 transaction.ack.consumer.bootstrap.servers=localhost:9092
