kafka_4: реализовано задание 4

--- a/src/main/resources/kafka.properties
+++ b/src/main/resources/kafka.properties
@@ -1,29 +1,27 @@
-# настройки производителя транзакций
-transaction.producer.bootstrap.servers=localhost:9092
-transaction.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-transaction.producer.value.serializer=sbp.school.kafka.transaction.TransactionSerializer
-transaction.producer.partitioner.class=sbp.school.kafka.transaction.TransactionPartitioner
-transaction.producer.acks=all
-transaction.producer.retries=2147483647
-transaction.producer.batch.size=100000
-transaction.producer.linger.ms=10
-transaction.producer.compression.type=lz4
+# настройки потребителя транзакций
+transaction.consumer.bootstrap.servers=localhost:9092
+transaction.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+transaction.consumer.value.deserializer=sbp.school.kafka.transaction.utils.TransactionDeserializer
+transaction.consumer.group.id=transaction-consumer
+transaction.consumer.enable.auto.commit=false
+transaction.consumer.auto.offset.reset=latest
+transaction.consumer.max.poll.records=500
 # имя топика транзакций
 transaction.topic.name=transaction-topic
-# период переотправки транзакций, у которых истек таймаут подтверждения
-transaction.retry.period=PT5S
+# таймаут ожидания транзакций, отправленных в интервале времени
+transaction.receive.timeout=PT10S
 
-# настройки потребителя подтверждений обработки транзакций
-transaction.ack.consumer.bootstrap.servers=localhost:9092
-transaction.ack.consumer.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-transaction.ack.consumer.value.deserializer=sbp.school.kafka.ack.AckDeserializer
-transaction.ack.consumer.group.id=transaction-ack-consumer
-transaction.ack.consumer.enable.auto.commit=false
-transaction.ack.consumer.auto.offset.reset=latest
-transaction.ack.consumer.max.poll.records=500
+# настройки производителя подтверждений обработки транзакций
+transaction.ack.producer.bootstrap.servers=localhost:9092
+transaction.ack.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+transaction.ack.producer.value.serializer=sbp.school.kafka.ack.utils.AckSerializer
+transaction.ack.producer.acks=all
+transaction.ack.producer.linger.ms=10
+transaction.ack.producer.retries=5
+transaction.ack.producer.compression.type=lz4
 # имя топика подтверждений
 transaction.ack.topic.name=transaction-ack-topic
-# таймаут ожидания подтверждения
-transaction.ack.timeout=PT10S
+# период отправки подтверждений
+transaction.ack.period=PT5S
 # длительность интервала группировки транзакций для вычисления контрольной суммы
 transaction.checksum.interval=PT10S
