kafka_6: выполнено задание 6

--- a/kafka_6/mirror-maker-consumer.properties
+++ b/kafka_6/mirror-maker-consumer.properties
@@ -19,8 +19,12 @@
 bootstrap.servers=localhost:9092
 
 # consumer group id
-group.id=test-consumer-group
+group.id=mirror-maker-group
 
 # What to do when there is no initial offset in Kafka or if the current
 # offset does not exist any more on the server: latest, earliest, none
-#auto.offset.reset=
+auto.offset.reset=earliest
+
+auto.commit.enable=false
+exclude.internal.topics=true
+client.id=mirror_maker_consumer
