--- a/kafka_6/mirror-maker-producer.properties
+++ b/kafka_6/mirror-maker-producer.properties
@@ -18,7 +18,7 @@
 
 # list of brokers used for bootstrapping knowledge about the rest of the cluster
 # format: host1:port1,host2:port2 ...
-bootstrap.servers=localhost:9092
+bootstrap.servers=localhost:9093
 
 # specify the compression codec for all data generated: none, gzip, snappy, lz4, zstd
 compression.type=none
@@ -44,3 +44,6 @@ compression.type=none
 
 # the total bytes of memory the producer can use to buffer records waiting to be sent to the server
 #buffer.memory=
+
+client.id=mirror_maker_producer
+ack=all
